test/fixtures/type-error/bad-assignment.lys
fun test(): f32 = {
  var test = 1
  test = 123.0
  test
}
